fix: Wrong Leader table alignment on Safari

--- a/src/index.css
+++ b/src/index.css
@@ -268,3 +268,7 @@ fieldset {
 button[type='submit'] {
   display: block;
 }
+
+.table {
+  margin: 20px auto;
+}
